# docker_django

./: README.md  db.sqlite3  dev_backend.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: settings.py
